--- a/IESA_ROOT/users/templates/users/login.html
+++ b/IESA_ROOT/users/templates/users/login.html
@@ -36,20 +36,42 @@
                 {% for field in form %}
                     <div class="mb-3">
                         <label for="{{ field.id_for_label }}" class="form-label fw-500">{{ field.label }}</label>
-                        {% with field_class="form-control" %}
-                            {% if field.errors %}
-                                {% with field_class="form-control is-invalid" %}
-                                    {{ field }}
+                        {% if field.field.widget.input_type == "password" %}
+                            <div class="password-field-wrapper">
+                                {% with field_class="form-control" %}
+                                    {% if field.errors %}
+                                        {% with field_class="form-control is-invalid" %}
+                                            {{ field }}
+                                        {% endwith %}
+                                        <div class="invalid-feedback d-block">
+                                            {% for error in field.errors %}
+                                                <i class="fas fa-times-circle me-1"></i>{{ error }}<br>
+                                            {% endfor %}
+                                        </div>
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
                                 {% endwith %}
-                                <div class="invalid-feedback d-block">
-                                    {% for error in field.errors %}
-                                        <i class="fas fa-times-circle me-1"></i>{{ error }}<br>
-                                    {% endfor %}
-                                </div>
-                            {% else %}
-                                {{ field }}
-                            {% endif %}
-                        {% endwith %}
+                                <button type="button" class="password-toggle-btn" onclick="togglePasswordVisibility(this)">
+                                    <i class="fas fa-eye"></i>
+                                </button>
+                            </div>
+                        {% else %}
+                            {% with field_class="form-control" %}
+                                {% if field.errors %}
+                                    {% with field_class="form-control is-invalid" %}
+                                        {{ field }}
+                                    {% endwith %}
+                                    <div class="invalid-feedback d-block">
+                                        {% for error in field.errors %}
+                                            <i class="fas fa-times-circle me-1"></i>{{ error }}<br>
+                                        {% endfor %}
+                                    </div>
+                                {% else %}
+                                    {{ field }}
+                                {% endif %}
+                            {% endwith %}
+                        {% endif %}
                     </div>
                 {% endfor %}
                 
