--- a/IESA_ROOT/users/templates/users/register.html
+++ b/IESA_ROOT/users/templates/users/register.html
@@ -39,6 +39,26 @@
                                     {{ field.label }}
                                 </label>
                             </div>
+                        {% elif field.field.widget.input_type == "password" %}
+                            <div class="password-field-wrapper">
+                                {% with field_class="form-control" %}
+                                    {% if field.errors %}
+                                        {% with field_class="form-control is-invalid" %}
+                                            {{ field }}
+                                        {% endwith %}
+                                        <div class="invalid-feedback d-block">
+                                            {% for error in field.errors %}
+                                                <i class="fas fa-times-circle me-1"></i>{{ error }}<br>
+                                            {% endfor %}
+                                        </div>
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
+                                {% endwith %}
+                                <button type="button" class="password-toggle-btn" onclick="togglePasswordVisibility(this)">
+                                    <i class="fas fa-eye"></i>
+                                </button>
+                            </div>
                         {% else %}
                             {% with field_class="form-control" %}
                                 {% if field.errors %}
