--- a/IESA_ROOT/users/templates/users/profile.html
+++ b/IESA_ROOT/users/templates/users/profile.html
@@ -41,7 +41,7 @@
                                     <div class="profile-qr-card">
                                         <h6 class="profile-detail-label mb-3">Your QR Code</h6>
                                         <a href="{% url 'users:profile_by_card' permanent_id=profile_user.permanent_id %}" title="Open profile by card">
-                                            <img src="{% url 'user_qr' permanent_id=profile_user.permanent_id %}" 
+                                            <img src="{% url 'users:user_qr' permanent_id=profile_user.permanent_id %}" 
                                                  alt="QR Code" class="qr-code-img">
                                         </a>
                                         <p class="mt-3 mb-0 small text-muted">Scan to view profile</p>
@@ -51,7 +51,7 @@
                                     <a href="{% url 'users:profile_edit' %}" class="btn btn-primary">
                                         <i class="fas fa-edit me-2"></i>Edit Profile
                                     </a>
-                                    <a href="{% url 'user_qr' permanent_id=profile_user.permanent_id %}?download=1" class="btn btn-outline-primary">
+                                    <a href="{% url 'users:user_qr' permanent_id=profile_user.permanent_id %}?download=1" class="btn btn-outline-primary">
                                         <i class="fas fa-qrcode me-2"></i>Download QR
                                     </a>
                                 </div>
